--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,12 @@
 [phases.setup]
-nixPaths = []
+nixPkgs = ["php83", "php83Packages.composer"]
+aptPkgs = ["php8.3-gd", "php8.3-mysql", "php8.3-zip", "php8.3-xml", "php8.3-mbstring", "php8.3-curl"]
 
 [phases.install]
-cmds = []
+cmds = ["composer install --optimize-autoloader --no-dev --no-interaction --ignore-platform-req=ext-gd"]
 
 [phases.build]
-cmds = []
+cmds = ["composer dump-autoload --optimize"]
+
+[start]
+cmd = "php artisan serve --host=0.0.0.0 --port=${PORT}"
