--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=20.81.148.176
-DB_HOST=127.0.0.1
+DB_CONNECTION=mysql
+DB_HOST=20.81.148.176
 DB_PORT=3306
 DB_DATABASE=odontoapp
 DB_USERNAME=root
