--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=20.81.148.176
 DB_PORT=3306
 DB_DATABASE=odontoapp
-DB_USERNAME=root
+DB_USERNAME=odontoapp_user
 DB_PASSWORD=WC39ka10@
 
 BROADCAST_DRIVER=log
